利用hystrix实现服务监控

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>borrow-service</module>
         <module>commons</module>
         <module>eureka-server</module>
+        <module>hystrix-dashboard</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
