--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>eureka-server</module>
         <module>hystrix-dashboard</module>
         <module>gateway-server</module>
+        <module>config-server</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
